--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.16.5",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@fullcalendar/common": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
+    "cookie": "^0.4.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.7",
+    "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
