--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/common": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/moment": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@mui/icons-material": "^5.2.1",
