--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.16.5",
+    "@date-io/moment": "^2.11.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@fullcalendar/common": "^5.10.1",
@@ -18,10 +19,12 @@
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@mui/icons-material": "^5.2.1",
+    "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
     "cookie": "^0.4.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "next": "12.0.7",
     "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
